# astra-ai-framework

./: README.md  pyproject.toml  requirements.txt
astra/: __init__.py  agent.py  application.py  config.py  llms.py  memory.py  messages.py  router.py  storage.py  task.py  tasks.py  tools.py  workflow.py
astra/models/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai_chat.py
examples/: __init__.py  codegen.py  codegen_app.py  codegen_app_2.py
